// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton tests should render IconButton correctly 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0:hover {
  background-color: #EEEEEE;
}

.c0:active {
  background-color: #E2E2E2;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-rounded"
        color="#000000"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton tests should render IconButton with different size 1`] = `
<DocumentFragment>
  .c1 {
  height: 2rem;
  width: 2rem;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 2rem;
}

.c0 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  height: 2.5rem;
  width: 2.5rem;
}

.c0:hover:not(:active) {
  background-color: #E2E2E2;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="32"
    >
      <span
        class="c2 material-symbols-rounded"
        color="#000000"
        data-testid="icon"
        size="32"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton tests should render primary IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c2 {
  color: #FFFFFF;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  height: 2.25rem;
  width: 2.25rem;
}

.c0:hover:not(:active) {
  background-color: #0e55d7;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-rounded"
        color="#FFFFFF"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton tests should render primaryNeutral IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c0 .material-symbols-sharp,
.c0 .material-symbols-rounded {
  color: inherit;
}

.c0:hover {
  color: #276EF1;
  background-color: #EFF3FE;
}

.c0:active {
  background-color: #D4E2FC;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-rounded"
        color="#000000"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton tests should render secondary IconButton 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c0:hover:not(:active) {
  background-color: #E2E2E2;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-rounded"
        color="#000000"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
  </button>
</DocumentFragment>
`;
